# KernelPractices

./: CMakeLists.txt  README.md  gemm.cu  gemm_tensor_core.cu  gemv.cu  gpu_info.cu  histogram.cu  layernorm.cu  mat_transpose.cu  reduce.cu  relu.cu  rms_norm.cu  rope.cu  sigmoid.cu  softmax.cu  utils.hpp
GEMM/: detailed_benchmark.md  gemm.cu  gemm_async.cu  gemm_cublas.cu  gemm_tensor_core.cu  gemm_tflops.py  gemm_wmma_tf32.cu  gemv.cu
